# googleplay-mcp

./: .env.example  .gitignore  CLAUDE.md  DISABLED_TOOLS.md  README.md  config.example.yaml  pyproject.toml
deploy/: com.googleplay-mcp.plist  googleplay-mcp.service  install.sh
src/googleplay_mcp/: __init__.py  __main__.py  auth.py  config.py  server.py
src/googleplay_mcp/tools/: __init__.py  monetization.py  orders.py  purchases.py  reporting.py  reports.py  reviews.py
src/googleplay_mcp/utils/: errors.py  response.py
