[project]
name = "googleplay-mcp"
version = "0.1.0"
description = "MCP server for Google Play backend data APIs (reporting, reviews, purchases, monetization)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-cloud-storage>=2.10.0",
    "pyyaml>=6.0",
]

[project.scripts]
googleplay-mcp = "googleplay_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/googleplay_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
